--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-cron": "^3.0.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
