--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "author": "Swarnim Varchaswa",
   "license": "ISC",
@@ -22,3 +22,4 @@
     "uuid": "^9.0.1"
   }
 }
+
