--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "Swarnim Varchaswa",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
@@ -22,4 +24,3 @@
     "uuid": "^9.0.1"
   }
 }
-
